[NGRINDER-209] Fix unit test errors and improve test coverage - add -Xms600m -Xmx1024m -XX:MaxPermSize=200m on surefire