@@ -260,13 +260,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
-		<!--DB migration-->
+
+		<!--DB migration -->
 		<dependency>
-	    	<groupId>org.liquibase</groupId>
-	    	<artifactId>liquibase-core</artifactId>
-	    	<version>2.0.5</version>
-    	</dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>2.0.5</version>
+		</dependency>
 
 		<!-- Spring dependencies -->
 		<dependency>
@@ -427,7 +427,13 @@
 					<encoding>${source-encoding}</encoding>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Xms600m -Xmx1024m -XX:MaxPermSize=200m</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 
 	</build>
